Started work on SetPoints